fixed hp spacing

--- a/app/assets/stylesheets/components/_link-blocks.scss
+++ b/app/assets/stylesheets/components/_link-blocks.scss
@@ -1,6 +1,7 @@
 .link-block {
+  background-color: $light-gold;
   text-align: center;
-  min-height: 35vh;
+  min-height: 260px;
   display: flex;
   flex-direction: column;
   align-items: center;
